Update Colab notebook with correct repo URL and structure

--- a/bbap_colab.ipynb
+++ b/bbap_colab.ipynb
@@ -1,161 +1,162 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Black Box Audio Protocol (BBAP) - Colab Runner\n",
-    "\n",
-    "This notebook sets up and runs the BBAP pipeline on Google Colab. \n",
-    "It handles:\n",
-    "1. Environment Setup (Dependencies & System Tools)\n",
-    "2. Google Drive Mounting\n",
-    "3. Hugging Face Authentication\n",
-    "4. Code Synchronization (Cloning from GitHub)\n",
-    "5. Execution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @title 1. Environment Setup\n",
-    "# @markdown Install system dependencies and Python libraries.\n",
-    "\n",
-    "!apt-get update -y\n",
-    "!apt-get install -y ffmpeg\n",
-    "\n",
-    "# Install core dependencies\n",
-    "!pip install git+https://github.com/m-bain/whisperx.git\n",
-    "!pip install pyannote.audio torch numpy scipy python-dotenv pyngrok"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @title 2. Mount Google Drive\n",
-    "# @markdown This lets us read audio files and save results to your Drive.\n",
-    "from google.colab import drive\n",
-    "import os\n",
-    "\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "# Ensure the project root exists\n",
-    "PROJECT_ROOT_PATH = \"/content/drive/My Drive/yuzhe\"\n",
-    "if not os.path.exists(PROJECT_ROOT_PATH):\n",
-    "    os.makedirs(PROJECT_ROOT_PATH, exist_ok=True)\n",
-    "    print(f\"Created project directory: {PROJECT_ROOT_PATH}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @title 3. Hugging Face Login\n",
-    "# @markdown Enter your HF Token (with READ permissions) to download Pyannote models.\n",
-    "# @markdown \n",
-    "# @markdown **Crucial:** Ensure you have accepted the user conditions for:\n",
-    "# @markdown - [pyannote/embedding](https://hf.co/pyannote/embedding)\n",
-    "# @markdown - [pyannote/speaker-diarization-3.1](https://hf.co/pyannote/speaker-diarization-3.1)\n",
-    "\n",
-    "from huggingface_hub import login\n",
-    "\n",
-    "login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @title 4. Setup Codebase\n",
-    "# @markdown We will clone the latest version of the code.\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "# Check if code already exists to avoid re-cloning conflicts\n",
-    "if not os.path.exists(\"/content/bbap\"):\n",
-    "    !git clone https://github.com/xiaoweili/bbap.git /content/bbap\n",
-    "else:\n",
-    "    %cd /content/bbap\n",
-    "    !git pull\n",
-    "\n",
-    "%cd /content/bbap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @title 5. Configuration (.env)\n",
-    "# @markdown Configure your run settings here.\n",
-    "hf_token_val = \"\" # @param {type:\"string\"}\n",
-    "# @markdown Leave empty to use the token you just logged in with, or paste it here to be explicit.\n",
-    "\n",
-    "whisper_model = \"medium\" # @param [\"tiny\", \"base\", \"small\", \"medium\", \"large-v3\"]\n",
-    "whisper_language = \"\" # @param {type:\"string\"}\n",
-    "\n",
-    "# Write the .env file\n",
-    "env_content = f\"\"\"\n",
-    "HF_TOKEN={hf_token_val}\n",
-    "WHISPER_MODEL={whisper_model}\n",
-    "WHISPER_LANGUAGE={whisper_language}\n",
-    "LOCAL_MODE=False\n",
-    "BASE_DIR=/content/drive/My Drive\n",
-    "PROJECT_ROOT_NAME=yuzhe\n",
-    "INPUT_FOLDER_NAME=Voice Record Pro\n",
-    "SIMILARITY_THRESHOLD=0.65\n",
-    "CLUSTER_MERGE_THRESHOLD=0.85\n",
-    "\"\"\"\n",
-    "\n",
-    "with open(\".env\", \"w\") as f:\n",
-    "    f.write(env_content)\n",
-    "\n",
-    "print(\"✅ Configuration saved to .env\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @title 6. Run Pipeline\n",
-    "# @markdown Start the daily processing batch.\n",
-    "\n",
-    "!python main.py"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Black Box Audio Protocol (BBAP) - Colab Runner\n",
+                "\n",
+                "This notebook sets up and runs the BBAP pipeline on Google Colab. \n",
+                "\n",
+                "**Steps:**\n",
+                "1. Mount Google Drive\n",
+                "2. Clone/Update Codebase\n",
+                "3. Install Dependencies (from requirements.txt)\n",
+                "4. Authenticate (Hugging Face)\n",
+                "5. Configure & Run"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title 1. Mount Google Drive\n",
+                "# @markdown This lets us read audio files and save results to your Drive.\n",
+                "from google.colab import drive\n",
+                "import os\n",
+                "\n",
+                "drive.mount('/content/drive')\n",
+                "\n",
+                "# Ensure the project root exists\n",
+                "PROJECT_ROOT_PATH = \"/content/drive/My Drive/yuzhe\"\n",
+                "if not os.path.exists(PROJECT_ROOT_PATH):\n",
+                "    os.makedirs(PROJECT_ROOT_PATH, exist_ok=True)\n",
+                "    print(f\"Created project directory: {PROJECT_ROOT_PATH}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title 2. Setup Codebase\n",
+                "# @markdown We will clone the latest version of the code from GitHub.\n",
+                "\n",
+                "import os\n",
+                "\n",
+                "# Check if code already exists to avoid re-cloning conflicts\n",
+                "if not os.path.exists(\"/content/bbap\"):\n",
+                "    !git clone https://github.com/yimoburu/bbap.git /content/bbap\n",
+                "else:\n",
+                "    %cd /content/bbap\n",
+                "    !git pull\n",
+                "\n",
+                "%cd /content/bbap"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title 3. Environment Setup\n",
+                "# @markdown Install system dependencies and Python libraries from requirements.txt.\n",
+                "\n",
+                "!apt-get update -y\n",
+                "!apt-get install -y ffmpeg\n",
+                "\n",
+                "# Install dependencies from the cloned repo\n",
+                "!pip install -r requirements.txt\n",
+                "!pip install pyngrok # useful for debug tunnels if needed"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title 4. Hugging Face Login\n",
+                "# @markdown Enter your HF Token (with READ permissions) to download Pyannote models.\n",
+                "# @markdown \n",
+                "# @markdown **Crucial:** Ensure you have accepted the user conditions for:\n",
+                "# @markdown - [pyannote/embedding](https://hf.co/pyannote/embedding)\n",
+                "# @markdown - [pyannote/speaker-diarization-3.1](https://hf.co/pyannote/speaker-diarization-3.1)\n",
+                "\n",
+                "from huggingface_hub import login\n",
+                "\n",
+                "login()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title 5. Configuration (.env)\n",
+                "# @markdown Configure your run settings here.\n",
+                "hf_token_val = \"\" # @param {type:\"string\"}\n",
+                "# @markdown Leave empty to use the token you just logged in with, or paste it here to be explicit.\n",
+                "\n",
+                "whisper_model = \"medium\" # @param [\"tiny\", \"base\", \"small\", \"medium\", \"large-v3\"]\n",
+                "whisper_language = \"\" # @param {type:\"string\"}\n",
+                "\n",
+                "# Write the .env file\n",
+                "env_content = f\"\"\"\n",
+                "HF_TOKEN={hf_token_val}\n",
+                "WHISPER_MODEL={whisper_model}\n",
+                "WHISPER_LANGUAGE={whisper_language}\n",
+                "LOCAL_MODE=False\n",
+                "BASE_DIR=/content/drive/My Drive\n",
+                "PROJECT_ROOT_NAME=yuzhe\n",
+                "INPUT_FOLDER_NAME=Voice Record Pro\n",
+                "SIMILARITY_THRESHOLD=0.65\n",
+                "CLUSTER_MERGE_THRESHOLD=0.85\n",
+                "\"\"\"\n",
+                "\n",
+                "with open(\".env\", \"w\") as f:\n",
+                "    f.write(env_content)\n",
+                "\n",
+                "print(\"✅ Configuration saved to .env\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# @title 6. Run Pipeline\n",
+                "# @markdown Start the daily processing batch.\n",
+                "\n",
+                "!python main.py"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.10.12"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 2
 }
